# 1121_Deep_Learning

./: .gitignore  Dockerfile  Lab06_112501533.py  build_container.sh  environment.yml  pyproject.toml  requirements.txt  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  pre-build.sh  requirements.txt
.devcontainer/src/: create_user.sh  set_environment_variable.sh
L2/: Lab02_112501533.ipynb  main.ipynb
L3/: Lab03_112501533.ipynb
L4/: Lab04-1_112501533.ipynb
L5/: Lab05_112501533.ipynb
L5/output/: Lab05_112501533_y_pred.csv
Lab02/: Lab02_112501533.ipynb
Lab03/: Lab03_112501533.ipynb
Lab04/: Lab04-1_112501533.ipynb
Lab04-1/: Lab04-1_112501533.ipynb
Lab04-2/: Lab04-2_112501533.ipynb
Lab06/: Lab06_112501533.ipynb  Lab06_112501533.py
Lab07/: Lab07_112501533.ipynb  main.py
Lab08/: Lab08_112501533.ipynb  main.py
Lab10/: Lab10_112501533.ipynb  Lab10_112501533.py
Lab11/: Lab11_112501533.ipynb  Lab11_112501533.py
Lab11-1/: Lab11_112501533.ipynb  Lab11_112501533.py
Lab11-2/: Lab11-2_112501533.py
Lab12-1/: Lab12-1_112501533.ipynb  Lab12-1_112501533.py
Lab12-2/: Lab12-2_112501533.ipynb  Lab12-2_112501533.py
Lab13/: Lab13_112501533.py  main.py
Lab14/: main.py
Lab15/: Lab15_112501533.ipynb
