[tool.poetry]
name = "1121-deep-learning"
version = "0.1.0"
description = ""
authors = ["huang0520 <huangmorris4x@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.12"
numpy = "^1.26.0"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
scikit-learn = "^1.3.1"
tensorflow = "^2.14.0"
ipython = "^8.16.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "F",    # Pyflakes
    "E",    # Pycodestyle
    "W",
    "I001", # isort
]
ignore = ["F401"]
target-version = "py310"
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]

[tool.ruff.pydocstyle]
convention = "google" # Accepts: "google", "numpy", or "pep257".
